       HP LaserJet M3035 MFP (corrected)
       HP LaserJet P3005 (corrected)

     - Device IDs added for the following Samsung printers:
       Samsung ML-1450 (possibly incomplete)

     - Device IDs added for the following Kodak printers:
       Kodak 1400
       Kodak 805
       Kodak 6800

     - Device IDs added for the following Kyocera printers:
       Kyocera FS-1118MFP

  6) Added Catalan translation.

  7) Updated support for the Sony UP-DR150 Photo Printer

	Its output now matches the current Windows drivers.

* Changes from 5.2.8

  1) This release fixes an inappropriate change to the internal
     library version number (.soname or equivalent) made in 5.2.8.
     All distributors should immediately apply this update to their
     distributions to avoid other software linking against
     libgutenprint breaking.

  2) Duplicate Transparency entries in the media types for Canon
     iP4100 and similar printers have been removed.

  3) The range of fine position adjustment of CD media has been
     increased for Epson printers.

  4) The German translation has been updated.

  5) Canon PIXMA Pro9000 plain media high quality mode bug fix.

* Changes from 5.2.7

  1) The Canon driver has been significantly overhauled for this
     release, and output (and in some cases functionality) may be
     significantly different from previous releases.  We expect to
     perform further work in future releases.  Specific changes
     include:

     * All known combinations of offered modes now work in CUPS.
       Previously, certain combinations would fail to print, with
       error messages about invalid combinations of printing options.

     * The following Canon printer models were completely redefined or
       had major changes carried out in the supported modes:

	 Canon   BJC 3000    (EXPERIMENTAL)
	 Canon   BJC S300    (EXPERIMENTAL)
	 Canon   BJC S500    (EXPERIMENTAL)
	 Canon   BJC S600    (EXPERIMENTAL)
	 Canon   BJC S800    (EXPERIMENTAL)