@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.131 2013/07/14 12:01:25 speachy Exp $
+## $Id: Makefile.am,v 1.132 2013/07/14 21:55:32 speachy Exp $
 ## Copyright (C) 2000 Roger Leigh
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -84,7 +84,7 @@ sbin_SCRIPTS = cups-genppdupdate
 cupsexec_filter_PROGRAMS = rastertogutenprint.@GUTENPRINT_MAJOR_VERSION@.@GUTENPRINT_MINOR_VERSION@ commandtoepson commandtocanon
 
 if BUILD_LIBUSB_BACKENDS
-cupsexec_backend_PROGRAMS = selphy kodak1400 kodak6800 shinko_s2145
+cupsexec_backend_PROGRAMS = selphy kodak1400 kodak6800 shinko_s2145 sony_updr150
 endif
 
 ## CUPS backends require no world-execute permissions if they are to be
@@ -131,6 +131,10 @@ kodak6800_LDADD = $(LIBUSB_LIBS)
 shinko_s2145_SOURCES = shinko_s2145_print.c
 shinko_s2145_CPPFLAGS = $(LIBUSB_CFLAGS)
 shinko_s2145_LDADD = $(LIBUSB_LIBS)
+
+sony_updr150_SOURCES = sony_updr150_print.c
+sony_updr150_CPPFLAGS = $(LIBUSB_CFLAGS)
+sony_updr150_LDADD = $(LIBUSB_LIBS)
 
 cups_genppd_@GUTENPRINT_MAJOR_VERSION@_@GUTENPRINT_MINOR_VERSION@_SOURCES = genppd.c i18n.c i18n.h
 cups_genppd_@GUTENPRINT_MAJOR_VERSION@_@GUTENPRINT_MINOR_VERSION@_CFLAGS = -DALL_LINGUAS='"$(ALL_LINGUAS)"' $(BUILD_SIMPLE_PPDS) $(TRANSLATE_PPDS)
