@@ -1119,11 +1119,16 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
      - Device IDs added for the following Kyocera printers:
        Kyocera FS-1118MFP
 
+     - Device IDs added for the following Sony printers:
+       Sony UP-DR150
+
   6) Added Catalan translation.
 
   7) Updated support for the Sony UP-DR150 Photo Printer
 
-	Its output now matches the current Windows drivers.
+	The output generated by Gutenprint now matches current Windows 
+	drivers.  Additionally, an intelligent CUPS backend was added
+	to translate that output into something the printer understands.
 
 * Changes from 5.2.8
 
